[workspace]
members = ["server/*","client/*", "crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
# homepage = ""
# documentation = ""
repository = "https://github.com/gouzil/rfuse"
authors = ["gouzil <530971494@qq.com>"]
license = "MIT"

[workspace.dependencies]
log = "0.4.22"
fuser = { git = "https://github.com/cberner/fuser.git", branch="master" }
libc = "0.2"
walkdir = "2.5.0"
nix = { version = "0.29.0", features=["fs","user"]}
fern = { version = "0.6.2", features = ["date-based"]}
clap = { version = "4.5.13", features = ["derive"]}
colored = { version = "2.1.0" }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
notify = { version ="6.1.1" }
anyhow = "1.0.86"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
# tokio-stream = { version = "0.1.15"}
