[package]
name = "rfuses_cli"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
# homepage = { workspace = true }
# documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
log = {workspace = true}
