[package]
name = "rfuses_device_local"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
fuser.workspace = true
rfuse_core = { path = "../../crates/rfuse_core" }
rfuse_device_disk = { path = "../../crates/rfuse_device_disk", features = ["local"]}
walkdir.workspace = true
nix.workspace = true
fern.workspace = true
ctrlc.workspace = true
clap.workspace = true
colored.workspace = true
chrono.workspace = true
notify.workspace = true
anyhow.workspace = true

[target.'cfg(target_os="linux")'.dependencies]
procfs = "0.16.0"

[dev-dependencies]
# Disable colored output in tests
colored = { workspace = true, features = ["no-color"] }
