[package]
name = "rfuses_device_local"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
fuser.workspace = true
rfuse_core = { path = "../../crates/rfuse_core" }
rfuse_device_disk = { path = "../../crates/rfuse_device_disk", features = ["local"]}
walkdir.workspace = true
nix.workspace = true
fern.workspace = true
clap.workspace = true
colored.workspace = true
chrono.workspace = true
notify.workspace = true
anyhow.workspace = true
tokio.workspace = true
# tokio-stream.workspace = true
directories.workspace = true

[target.'cfg(target_os="linux")'.dependencies]
procfs = "0.16.0"

[dev-dependencies]
# Disable colored output in tests
colored = { workspace = true, features = ["no-color"] }
tempfile.workspace = true
assert_fs = { version = "1.1.2" }
etcetera.workspace = true
fs-err.workspace = true
insta = { version = "1.36.1", features = ["filters", "json"] }
regex.workspace = true
tokio = { workspace = true, features = ["process", "io-util"] }
nix = { workspace = true, features = ["signal"] }
